# greg-umbrel-app-store

./: .gitignore  PRUEFBERICHT.md  README.md  TOKEN-MIGRATION.md  umbrel-app-store.yml
.github/scripts/: validate_package.py
.github/workflows/: build-image.yml
greg-umbrel-readonly-bridge/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  umbrel-app.yml
greg-umbrel-readonly-bridge/src/umbrel_ro_bridge/: __init__.py  server.py
greg-umbrel-readonly-bridge/tests/: test_bridge.py  test_health_sse.py
