[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "umbrel-ro-bridge"
version = "1.0.0"
description = "Read-only MCP filesystem bridge for Umbrel"
requires-python = ">=3.11"
dependencies = [
    "mcp",
    "uvicorn[standard]",
    "starlette",
]

[project.scripts]
umbrel-ro-bridge = "umbrel_ro_bridge.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/umbrel_ro_bridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
